<resources>
    <string name="app_name">Super cars</string>
    <string name="tires">tires</string>
    <string name="super_cars">Super Cars</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="title_activity_main3">Main3Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_data_being_stored">I agree to data being stored</string>
    <string name="string_i_agree_to_data_being_stored" />
    <string name="enter_password">Password</string>
    <string name="weclome">WECLOME</string>
    <string name="stats">Stats</string>
    <string name="how_to_play">How To Play</string>
    <string name="play">Play</string>
    <string name="view_cards">View Cards</string>
    <string name="todo">TODO</string>
    <string name="btnPrevious"><![CDATA[<]]></string>
    <string name="textview">TextView</string>
    <string name="btnNext"><![CDATA[>]]></string>
    <string name="mute">Mute</string>
</resources>
