<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewCards">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="451dp"
        android:layout_height="883dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tires"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtTitle3"
        android:layout_width="405dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/super_cars"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="98dp"
        android:layout_height="79dp"
        android:layout_marginStart="44dp"
        android:text="@string/btnPrevious"
        android:textAlignment="center"
        android:onClick="moveCard"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnNext"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="98dp"
        android:layout_height="79dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="88dp"
        android:onClick="moveCard"
        android:text="@string/btnNext"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="OnClick" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="317dp"
        android:layout_height="412dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="#4AB798"
        android:textColorHighlight="#53D5B9"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />
</androidx.constraintlayout.widget.ConstraintLayout>